# python-kata

./: .flake8  .gitignore  Exercises.md  README.md  array_comparison.py  array_comparison_test.py  isogram.py  isogram_test.py  pyproject.toml  remove_spaces.py  remove_spaces_test.py  requirements.txt
kata/: anagrams.py  consec_strings.py  count_chars.py  isogram.py  name_list.py  remove_spaces.py  square_digits.py
project_euler/: __init__.py  p1.py
tests/: anagrams_test.py  array_comparison_test.py  consec_strings_test.py  count_chars_test.py  isogram_test.py  names_list_test.py  project_euler_test.py  remove_spaces_test.py  square_digts_test.py
