[tool.poetry]
name = "kata"
version = "0.1.0"
description = "Kata exercises and project euler solutions"
authors = ["karanveer <karan_4496@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"
flake8 = "^3.8.4"
ipython = "^7.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
